-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 12
-
Component/s: core-libs
-
b25
-
linux
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8215661 | 13 | Pavel Rappo | P2 | Resolved | Fixed | b01 |
| JDK-8216090 | 12.0.1 | Pavel Rappo | P2 | Resolved | Fixed | master |
A separate issue will be open to track the progress of investigation and re-application of the changes.
- backported by
-
JDK-8215661 Back out changes for node- and link- local ipv6 multicast address
-
- Resolved
-
-
JDK-8216090 Back out changes for node- and link- local ipv6 multicast address
-
- Resolved
-
- duplicates
-
JDK-8214247 java/nio/channels/DatagramChannel/MulticastSendReceiveTests.java fails at Linux: Expected message not received
-
- Closed
-
- relates to
-
JDK-8210493 Bind to node- or linklocal ipv6 multicast address fails
-
- Closed
-
-
JDK-8215294 Provide a better fix for binding to node- and link- local ipv6 multicast addresses
-
- Closed
-
-
JDK-8214247 java/nio/channels/DatagramChannel/MulticastSendReceiveTests.java fails at Linux: Expected message not received
-
- Closed
-
-
JDK-8214769 java/net/MulticastSocket/Promiscuous.java fails intermittently
-
- Closed
-