8215292: Back out changes for node- and link- local ipv6 multicast address

Reviewed-by: chegar, alanb